v4.12.1 ??? 2011
  - Added support for __setattr__ and __delattr__ methods.

v4.12 23rd December 2010
  - Implemented the revised directive syntax for %Module.
  - Deprecated %CModule, use %Module instead.
  - Added the keyword_arguments argument to %Module to specify the level of
    support for Python keyword arguments.
  - Deprecated the -k flag to sip, use the keyword_arguments argument to
    %Module instead.
  - Added an automatic pseudo-%Timeline to allow the SIP version number to be
    used in the %If directive.
  - Changed the behavior of the /KeywordArgs/ annotation to specify the level
    of support for Python keyword arguments.
  - Deprecated the /NoKeywordArgs/ annotation, use /KeywordArgs="None"/
    instead.
  - Added the use_argument_names argument to %Module to provide the real names
    of arguments to handwritten code.
  - Module docstrings are now supported.
  - Added %AutoPyName to automatically provide Python names.
  - Added %Property to implement Python properties based on C/C++ getters and
    setters.
  - Added %Extract to allow arbitrary text to be embedded in specification
    files and subsequently extracted.
  - Deprecated %Doc and %ExportedDoc, use %Extract instead.
  - Added the -X flag to sip to extract text defined with %Extract.
  - Deprecated the -d flag to sip, use -X instead.
  - Added /PyInt/ as an argument, function and typedef annotation to force
    char types to be handled as Python integers rather than single character
    strings.
  - Added the L and M format characters to sipBuildResult(), sipCallMethod()
    and sipParseResult().
  - Added sipGetAddress().
  - Added the -T flag to sip to suppress the timestamp in the header comments
    of generated files.
  - sip.voidptr now behaves like a Python memoryview object and supports
    sub-script assignment.
  - Added the --sip-module flag to configure.py to allow the name and
    containing package of the sip module to be specified thereby allowing